--- a/index.html
+++ b/index.html
@@ -16,11 +16,18 @@
   <p>Agregá esta app a la pantalla de inicio</p>
   <p>Luego se abrirá automáticamente</p>
 
-  <script>
-    setTimeout(() => {
-      window.location.href =
-      "https://www.appsheet.com/start/111884a5-30bd-45d9-a382-196fde4884a6";
-    }, 3000);
-  </script>
+<a href="https://www.appsheet.com/start/111884a5-30bd-45d9-a382-196fde4884a6"
+   style="
+     display:inline-block;
+     margin-top:40px;
+     padding:16px 24px;
+     background:#8BC34A;
+     color:white;
+     text-decoration:none;
+     border-radius:10px;
+     font-size:18px;">
+   Entrar a Casa Mía
+</a>
+
 </body>
 </html>
