--- a/index.html
+++ b/index.html
@@ -2,32 +2,27 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Casa Mía</title>
+  <title>Casa Mia</title>
 
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#8BC34A">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#A8E063">
 
-  <link rel="icon" href="icono.png">
+  <!-- ICONOS -->
+  <link rel="icon" href="icon-192.png">
+  <link rel="apple-touch-icon" href="icon-192.png">
+
+  <!-- PWA -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+
+  <meta name="application-name" content="Casa Mia">
+  <meta name="apple-mobile-web-app-title" content="Casa Mia">
 </head>
 
-<body style="font-family:sans-serif;text-align:center;margin-top:60px">
-  <h2>Casa Mía</h2>
-  <p>Agregá esta app a la pantalla de inicio</p>
-  <p>Luego se abrirá automáticamente</p>
-
-<a href="https://www.appsheet.com/start/111884a5-30bd-45d9-a382-196fde4884a6"
-   style="
-     display:inline-block;
-     margin-top:40px;
-     padding:16px 24px;
-     background:#8BC34A;
-     color:white;
-     text-decoration:none;
-     border-radius:10px;
-     font-size:18px;">
-   Entrar a Casa Mía
-</a>
-
+<body style="margin:0">
+  <iframe 
+    src="https://www.appsheet.com/start/111884a5-30bd-45d9-a382-196fde4884a6"
+    style="border:none;width:100vw;height:100vh">
+  </iframe>
 </body>
 </html>
