--- a/index.html
+++ b/index.html
@@ -7,22 +7,19 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#A8E063">
 
-  <!-- ICONOS -->
   <link rel="icon" href="icon-192.png">
   <link rel="apple-touch-icon" href="icon-192.png">
 
-  <!-- PWA -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
 
   <meta name="application-name" content="Casa Mia">
   <meta name="apple-mobile-web-app-title" content="Casa Mia">
+
+  <!-- REDIRECCIÓN -->
+  <meta http-equiv="refresh" content="0; url=https://www.appsheet.com/start/111884a5-30bd-45d9-a382-196fde4884a6">
 </head>
 
-<body style="margin:0">
-  <iframe 
-    src="https://www.appsheet.com/start/111884a5-30bd-45d9-a382-196fde4884a6"
-    style="border:none;width:100vw;height:100vh">
-  </iframe>
+<body>
 </body>
 </html>
