--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Casa Mia</title>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#A8E063">
 
@@ -15,11 +17,14 @@
 
   <meta name="application-name" content="Casa Mia">
   <meta name="apple-mobile-web-app-title" content="Casa Mia">
-
-  <!-- REDIRECCIÓN -->
-  <meta http-equiv="refresh" content="0; url=https://www.appsheet.com/start/111884a5-30bd-45d9-a382-196fde4884a6">
 </head>
 
 <body>
+  <script>
+    // Pequeña demora para que Chrome detecte PWA
+    setTimeout(function () {
+      window.location.href = "https://www.appsheet.com/start/111884a5-30bd-45d9-a382-196fde4884a6";
+    }, 600);
+  </script>
 </body>
 </html>
