--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 <body style="font-family:sans-serif;text-align:center;padding-top:40px">
 
   <h2>Casa Mia</h2>
-  <p>Instalá la app para un mejor acceso</p>
+
+  <p id="msg">Cargando...</p>
 
   <button id="installBtn" style="
+    display:none;
     padding:15px 25px;
     font-size:16px;
     background:#A8E063;
@@ -33,11 +35,24 @@
   </button>
 
   <script>
+    const APP_URL = "https://www.appsheet.com/start/111884a5-30bd-45d9-a382-196fde4884a6";
+
+    function abrirApp() {
+      window.location.href = APP_URL;
+    }
+
+    // Si está instalada como PWA → abrir directo
+    if (window.matchMedia('(display-mode: standalone)').matches) {
+      abrirApp();
+    }
+
     let deferredPrompt;
 
     window.addEventListener('beforeinstallprompt', (e) => {
       e.preventDefault();
       deferredPrompt = e;
+      document.getElementById('msg').innerText =
+        "Instalá la app para acceder más rápido";
       document.getElementById('installBtn').style.display = 'inline-block';
     });
 
@@ -45,7 +60,7 @@
       if (!deferredPrompt) return;
       deferredPrompt.prompt();
       await deferredPrompt.userChoice;
-      window.location.href = "https://www.appsheet.com/start/111884a5-30bd-45d9-a382-196fde4884a6";
+      abrirApp();
     });
   </script>
 
